--- a/style.css
+++ b/style.css
@@ -54,6 +54,17 @@ a:hover{
 Body,h1,h2,h3.h4,h5,h6,a,span,p{
     font-family: 'work sans', sans-serif;
 }
+.newaletter-form .Submit-btn {
+	font-size: 19px;
+	padding: 10px 32px !important;
+	border-radius: 5px;
+}
+.newaletter-form .default-infut {
+	padding: 12px 20px;
+	font-size: 20px;
+	border-radius: 5px;
+	width: 350px;
+}
 .header-content {
     background: #fff;
     border-bottom: 1px solid #ddd;
@@ -110,26 +121,10 @@ Body,h1,h2,h3.h4,h5,h6,a,span,p{
     font-size: 20px;
     line-height: 35px;
 }
-
-
-/* DropDown Meno */
-.primary-meno ul li ul{
-    position: absolute;
-    top: 46px;
-    left: 0;
-    width: 228px;
-    background: #fff;
-    opacity: 0;
-    visibility: hidden;
-    transition: .5s;
-    transform: scaleY(0);
-    transform-origin: top center;
-}
-.primary-meno ul li:hover ul{
-    opacity: 1;
-    visibility: visible;
-    transform: scaleY(1);
-
+.content-form .default-infut {
+	margin-bottom: 31px;
+	text-align: left;
+	padding: 10px 10px;
 }
 /* bennar-section */
 .banner-section{
@@ -182,10 +177,6 @@ Body,h1,h2,h3.h4,h5,h6,a,span,p{
     color: #fff;
     text-decoration: none;
 }
-
-
-/* Banner-buttom */
-
 .banner-buttom{
  background: #fff;
  padding: 100px 0;
@@ -496,7 +487,6 @@ margin-bottom: 15px;
     border-style: solid;
     border-width: 20px 20px 0 20px;
     border-color: #ffffff transparent transparent transparent;
-
 }
 .t-content span {
         position: absolute;
@@ -538,9 +528,6 @@ margin-bottom: 15px;
     color: #767676;
     font-size: 20px;
 }
-
-
-
 /* contect-section */
 .contect-section {
     padding: 100px 0 10px 0px;
@@ -591,433 +578,9 @@ form .Submit-btn {
 .copyright-tex p {
     margin-top: 10px;
 }
-
-
-/* *************************************************
-                   Responsive css
-****************************************************/   
-@media (max-width:1399px){
-    .heder-logo {
-        padding-left: 50px;
-        box-sizing: border-box;
-    }
+.banner-section {
+    margin-top: 0 !important;
 }
-@media (max-width:1200px){
-    .primary-meno {
-        text-align: center;
-    }
-    .primary-meno ul li a {
-        padding: 0 9px;
-    }
-    .heder-logo {
-        padding-left: 20px;
-        box-sizing: border-box;
-    }
-}
-
-@media (max-width:1150px){
-    .service-box {
-        width: 47%;
-    }
-    .service-box:nth-child(2n+2){
-        margin-right: 0px;
-    }
-}
-
-
-@media (max-width:992px){
-    .heder-button {
-        width: 17%;
-    }
-    .heder-logo span {
-        font-size: 18px;
-    }
-    .heder-logo {
-        width: 26%;
-    }
-    .heder-logo {
-        width: 28%;
-    }
-    .primary-meno ul li a {
-        padding: 0 5px;
-        font-size: 17px;
-    }
-    .heder-meno {
-        width: 53%;
-    }
-    .banner-buttom .video-content-right p {
-        font-size: 19px;
-    }
-    .banner-buttom .video-content-right h3 {
-        font-size: 25px;
-        font-weight: 700;
-    }
-    .mid-content {
-        padding: 0 20px;
-    }
-    .banner-buttom {
-        padding: 35px 0;
-    }
-    .service-section .service-title h1 {
-        padding-bottom: 10px;
-        font-size: 30px;
-    }
-    .p-heading h1 {
-        margin: 20px 0;
-        font-size: 51px;
-    }
-    .p-heading p {
-        font-size: 20px;
-    }
-    .p-content ul li {
-        margin: 10px 0;
-        font-size: 17px;
-    }
-    .p-content ul li span {
-        font-size: 26px;
-        width: 39px;
-    }
-    .p-button .defult-btn {
-        box-shadow: 1px 4px 7px 0 rgb(78 120 223 / 30%);
-        font-size: 14px;
-        padding: 9px;
-    }
-    .pricing-tabile-section {
-        padding: 30px;
-    }
-    .member-bio p {
-        font-size: 14px;
-    }
-    .member-bio h4 {
-        font-size: 17px;
-        font-weight: 700;
-    }
-    .member {
-        width: 48%;
-        margin-bottom: 40px;
-    }
-    .team-section {
-        padding: 20px 0;
-    }
-    .user-bio h4 {
-        font-size: 20px;
-    }
-    .content-map {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .content-map {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .content-form {
-        width: 100%;
-    }
-    .blog-post-item {
-        padding-left: 20px;
-        box-sizing: border-box;
-        padding-top: 20px;
-    }
-}
-
-@media (max-width:768px){
-    .default-infut {
-        padding: 11px 18px;
-    }
-    .Submit-btn {
-        padding: 6px 32px;
-    }
-
-    .banner-section {
-        margin-top: 50px;
-    }
-    .banner-section h3 {
-        font-size: 20px;
-    }
-    .banner-section h2 {
-        font-size: 35px;
-        padding: 5px 0;
-    }
-    
-    .banner-buttom {
-        background: #fff;
-        padding: 30px 0;
-    }
-    .banner-section .difult-btn {
-        padding: 5px 5px;
-        margin-right: 10px;
-        margin-left: 10px;
-        border-radius: 5px;
-        font-size: 16px;
-        font-weight: 500;
-
-    }
-    .banner-buttom .video-left {
-        width: 100%;
-        padding: 0 66px;
-    }
-    .banner-buttom .video-content-right {
-        width: 100%;
-        padding: 15px 20px;
-        text-align: center;
-    }
-    .banner-buttom .video-content-right h3 {
-        font-size: 24px;
-        margin-bottom: 10px;
-    }
-    .banner-buttom .video-content-right p {
-        font-size: 17px;
-    }
-    .service-box {
-        width: 100%;
-    }
-    .pricing-tabile-itam {
-        width: 100%;
-    }
-
-/* Responsive mobile Menu */
-    .heder-logo {
-        width: 111%;
-        display: flex;
-        justify-content: center;
-        margin-left: -84px;
-    }
-    .primary-meno ul {
-        opacity: 0;
-        visibility: hidden;
-        height: 0;
-    }
-    .primary-meno ul li{
-        display: block;
-    }
-    .primary-meno .mobile-mune-check{
-        display: block;
-    }
-    input.mobile-mune-check {
-        position: absolute;
-        left: 13px;
-        top: 7px;
-        height: 42px;
-        width: 49px;
-        cursor: pointer;
-        opacity: 0;
-    }
-    .primary-meno {
-        position: relative;
-        width: 100%;
-        height: 45px;
-    }
-    .primary-meno span{
-        display: block;
-    }
-    .mobile-menu-icon {
-        position: absolute;
-        left: 24px;
-        top: 13px;
-        font-size: 30px;
-        color: #6278df;
-    }
-    .header-btn {
-        position: absolute;
-        right:0px;
-        top: 5px;
-    }
-    .heder-button {
-        width: 31%;
-        position: relative;
-    }
-    .heder-meno {
-        width: 69%;
-    }
-    .t-content span {
-        font-size: 51px;
-    }
-    .t-content p {
-        font-size: 15px;
-    }
-    .t-content {
-        padding: 24px;
-        margin-top: 20px;
-    }
-    .t-content span {
-        font-size: 51px;
-    }
-    .t-content p {
-        font-size: 15px;
-    }
-    .t-user-img {
-        width: 152px;
-        margin-top: 19px;
-    }
-    .t-user-img {
-        width: 230px;
-    }
-    .user-bio h4 {
-        font-size: 15px;
-        font-weight: 700;
-        margin-bottom: -3px;
-    }
-    .user-bio span {
-        font-size: 14px;
-    }
-    .testtimonial-section {
-        padding: 4px;
-    }
-    .t-item {
-        width: 100%;
-    }
-}
-@media (max-width:576px){
-    .service-section .service-title h1 {
-        padding-bottom: 5px;
-        font-size: 20px;
-    }
-    .service-section .service-title p {
-        font-size: 15px;
-    }
-    .member {
-        width: 100%;
-        margin-bottom: 40px;
-    }
-    .default-infut {
-        padding: 12px 26px;
-        width: 300px;
-    }
-    .Submit-btn {
-        padding: 7px 25px;
-    }
-    .b-heading {
-        width: 100%;
-        text-align: center;
-    }
-    .bt-content {
-        width: 100%;
-        text-align: center;
-    }
-    .blog-post-item {
-        width: 100%;
-        margin-bottom: 30px;
-    }
-    .service-title p {
-        margin: 0;
-    }
-    .service-title h2 {
-        font-size: 18px;
-    }
-    .testimonial-items {
-        margin-top: 20px;
-    }
-    .right {
-        width: 100%;
-        text-align: center;
-    }
-    .left {
-        width: 100%;
-        text-align: center;
-    }
-    .contect-fotter .sosule-icon span {
-        font-size: 20px;
-    }
-    .testimonial-items {
-        padding-bottom: 24px;
-    }
-    
-}
-/* Resposive */
 .navbar-brand img {
 	width: 50px;
 }
-@media (min-width: 768px) { 
-    .banner-section {
-        margin-top:0 ;
-    }
-    .service-box.left {
-        float: right;
-    }
-    .service-box.left {
-        margin-right: 0px !important;
-    }
-    .service-box {
-        width: 50%;
-    }
-}
-@media (min-width: 576px) {
-    .Submit-btn {
-        padding: 5px 7px !important;
-    }
-    .default-infut {
-        padding: 12px 26px;
-        width: 192px;
-    }
-    .c-form.clear button {
-        padding: 5px 20px !important;
-        display: block;
-        width: 100%;
-    }
-    .c-form.clear {
-        margin-bottom: 50px;
-    }
-}
-@media (min-width: 375px){
-    .banner-buttom .video-left {
-        padding: 0px 0px;
-    }
-    .banner-buttom .video-content-right p {
-        font-size: 17px;
-        text-align: left;
-    }
-    .banner-buttom .video-content-right h3 {
-        font-size: 20px;
-        margin-bottom: 33px;
-        text-align: left;
-    }
-    .s-content h3 {
-        font-size: 26px;
-        font-weight: bold;
-    }
-    .s-content p {
-        text-align: left;
-        font-size: 16px;
-    }
-    .pricing-tabile-section .mid-content {
-       padding: 0;
-    }
-    .team-section .mid-content {
-        padding: 0 10px;
-    }
-    .default-infut {
-        padding: 3px 12px;
-        width: 200px;
-    }
-    .newaletter-form .default-infut {
-        padding: 5px 15px;
-        font-size: 16px;
-        border-radius: 5px;
-    }
-    .newaletter-form .Submit-btn {
-        font-size: 16px;
-        padding: 2px 20px !important;
-        border-radius: 5px;
-    }
-    .blog-post-item img {
-        float: none;
-    }
-    .content-form .default-infut {
-        margin-bottom: 31px;
-        text-align: left;
-    }
-    .t-item.left {
-        padding-bottom: 50px;
-    }
-    .t-content {
-        margin-bottom: 0;
-    }
-}
-
-
-
-
-
-
-
-
